--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-benchmark-scheduler = {path = "pipeline/wheels/benchmark_scheduler-0.1.0-py3-none-any.whl"}
+benchmark-scheduler = {git = "https://github.com/VLMHyperBenchTeam/benchmark_scheduler"}
 
 
 [build-system]
