--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-benchmark-scheduler = {git = "https://github.com/VLMHyperBenchTeam/benchmark_scheduler"}
+benchmark-scheduler = {git = "https://github.com/VLMHyperBenchTeam/benchmark_scheduler.git", rev = "0.1.0"}
 
 
 [build-system]
