chore(.gitignore): Игнорируем метрики моделей
Игнорируем метрики моделей

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ vlmhyperbench/PromptCollection/*
 
 # Игнорируем ответы моделей
 vlmhyperbench/ModelsAnswers/*
+
+# Игнорируем метрики моделей
+vlmhyperbench/ModelsMetrics/*
