--- a/vlmhyperbench/cfg/BenchmarkRunConfig.json
+++ b/vlmhyperbench/cfg/BenchmarkRunConfig.json
@@ -1,18 +1,28 @@
 {
     "dataset": "snils",
     "framework": "Hugging Face",
-    "model_name": "Qwen2-VL-2B-Instruct",
-    "model_family": "Qwen2-VL",
+    "model_name": "Qwen2.5-VL-3B-Instruct",
+    "model_family": "Qwen2.5-VL",
     "task_name": "VQA",
-    "prompt_collection": "vlmhyperbench/PromptCollection/VQA/snils/qwen2_vl_2b/deepseek_chat.csv",
-    "docker_image": "ghcr.io/vlmhyperbenchteam/qwen2-vl:ubuntu22.04-cu124-torch2.4.0_v0.1.0",
-    "python_package": "model_qwen2_vl",
+    "prompt_collection": "VQA/snils/qwen2_vl_2b/deepseek_chat.csv",
+    "docker_image": "ghcr.io/vlmhyperbenchteam/qwen2.5-vl:ubuntu22.04-cu124-torch2.4.0_v0.1.0",
+    "python_package": "model_qwen2_5_vl",
     "module": "models",
-    "class_name": "Qwen2VLModel",
+    "class_name": "Qwen2_5_VLModel",
     "system_prompt": null,
-    "metrics": null,
+    "metrics": [
+        "WER",
+        "CER",
+        "BLEU"
+    ],
     "only_evaluate_metrics": false,
-    "metrics_aggregators": null,
-    "filter_doc_class": null,
-    "filter_question_type": null
+    "metrics_aggregators": [
+        "by_id",
+        "by_doc_question",
+        "by_doc_type",
+        "overal"
+    ],
+    "filter_doc_class": "",
+    "filter_question_type": "",
+    "metric_file": "ModelsAnswers/snils_MODELFRAMEWORK_Qwen2.5-VL-3B-Instruct_VQA_answers_20250223_220741.csv"
 }
