--- a/vlmhyperbench/cfg/VLMHyperBench_config.json
+++ b/vlmhyperbench/cfg/VLMHyperBench_config.json
@@ -12,5 +12,8 @@
         "bench_stages": "vlmhyperbench/bench_stages",
         "model_cache": "vlmhyperbench/model_cache",
         "wheels": "vlmhyperbench/wheels"
-    }
+    },
+    "eval_docker_img": "ghcr.io/vlmhyperbenchteam/metric-evaluator:python3.10-slim_v0.1.0",
+    "vlm_run_packages": "vlmhyperbench/cfg/vlm_run_requirements.txt",
+    "eval_run_packages": "vlmhyperbench/cfg/eval_run_requirements.txt"
 }
