chore(BenchmarkRunConfig.json): update to work on idt_pdf_full_mini
update to work on idt_pdf_full_mini

--- a/vlmhyperbench/cfg/BenchmarkRunConfig.json
+++ b/vlmhyperbench/cfg/BenchmarkRunConfig.json
@@ -1,10 +1,10 @@
 {
-    "dataset": "snils",
+    "dataset": "idt_pdf_full_mini",
     "framework": "Hugging Face",
-    "model_name": "Qwen2.5-VL-3B-Instruct",
+    "model_name": "Qwen2.5-VL-7B-Instruct",
     "model_family": "Qwen2.5-VL",
     "task_name": "VQA",
-    "prompt_collection": "VQA/snils/qwen2_vl_2b/yulia_ov.csv",
+    "prompt_collection": "VQA/idt_pdf_full/qwen2.5_vl_7b/JuliaJu_en_Qwen2_5-VL-7B_page_number_full_ver0_cer_00.csv",
     "docker_image": "ghcr.io/vlmhyperbenchteam/qwen2.5-vl:ubuntu22.04-cu124-torch2.4.0_v0.1.0",
     "git_python_package": "git+https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git@0.1.0",
     "python_package": "model_qwen2_5_vl",
@@ -21,7 +21,7 @@
         "by_doc_type",
         "general"
     ],
-    "filter_doc_class": "snils",
-    "filter_question_type": "\u041d\u043e\u043c\u0435\u0440 \u0441\u043d\u0438\u043b\u0441\u0430",
-    "metric_file": "/workspace/ModelsAnswers/snils_MODELFRAMEWORK_Qwen2.5-VL-3B-Instruct_VQA_answers_20250318_151457.csv"
+    "filter_doc_class": "doc",
+    "filter_question_type": "\u041d\u043e\u043c\u0435\u0440 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u044b",
+    "metric_file": "/workspace/ModelsAnswers/idt_pdf_full_mini_MODELFRAMEWORK_Qwen2.5-VL-7B-Instruct_VQA_answers_20250319_054000.csv"
 }
