feat(VLMHyperBench cfg): add user_config, benchmark_run_cfg, vlm_base
add user_config, benchmark_run_cfg, vlm_base

--- a/vlmhyperbench/cfg/VLMHyperBench_config.json
+++ b/vlmhyperbench/cfg/VLMHyperBench_config.json
@@ -1,4 +1,7 @@
 {
+    "user_config": "user_config.csv",
+    "benchmark_run_cfg": "vlmhyperbench/cfg/BenchmarkRunConfig.json",
+    "vlm_base": "vlmhyperbench/vlm_base.csv",
     "data_dirs": {
         "datasets": "vlmhyperbench/Datasets",
         "model_answers": "vlmhyperbench/ModelsAnswers",
