--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.3"
 ipykernel = "^6.29.5"
-benchmark-scheduler = {git = "https://github.com/VLMHyperBenchTeam/benchmark_scheduler.git", rev = "0.1.3"}
 config-manager = {git = "https://github.com/VLMHyperBenchTeam/config_manager.git", rev = "0.1.1"}
+docker = "^7.1.0"
+python-dotenv = "^1.0.1"
+benchmark-run-config = {git = "https://github.com/VLMHyperBenchTeam/benchmark_run_config.git", rev = "0.1.4"}
 
 [build-system]
 requires = ["poetry-core"]
