--- a/vlmhyperbench/system_dirs/cfg/VLMHyperBench_config.json
+++ b/vlmhyperbench/system_dirs/cfg/VLMHyperBench_config.json
@@ -1,5 +1,5 @@
 {
-    "user_config": "user_config_prompt_eval.csv",
+    "user_config": "user_config_model_eval.csv",
     "vlm_base": "vlmhyperbench/vlm_base.csv",
     "data_dirs": {
         "datasets": "vlmhyperbench/data_dirs/Datasets",
