--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,18 @@
-[tool.poetry]
+[project]
 name = "vlmhyperbench"
-version = "0.1.0"
-description = ""
-authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
+version = "0.1.3"
+description = "VLMHyperBench EvalKit"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-pandas = "^2.2.3"
-ipykernel = "^6.29.5"
-config-manager = {git = "https://github.com/VLMHyperBenchTeam/config_manager.git", rev = "0.1.2"}
-docker = "^7.1.0"
-python-dotenv = "^1.0.1"
-benchmark-run-config = {git = "https://github.com/VLMHyperBenchTeam/benchmark_run_config.git", rev = "0.1.4"}
-tqdm = "^4.67.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.10"
+dependencies = [
+    "benchmark-run-config @ git+https://github.com/VLMHyperBenchTeam/benchmark_run_config.git@0.1.4",
+    "config-manager @ git+https://github.com/VLMHyperBenchTeam/config_manager.git@0.1.2",
+    "docker>=7.1.0",
+    "ipykernel>=6.29.5",
+    "pandas>=2.2.3",
+    "python-dotenv>=1.1.0",
+    "tqdm>=4.67.1",
+]
 
 [tool.ruff]
 line-length = 88
